2014-08-21  Jan Hubicka  <hubicka@ucw.cz>

	PR tree-optimization/62091
	* g++.dg/ipa/devirt-37.C: Update template.
	* g++.dg/ipa/devirt-40.C: New testcase.

2014-08-21  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/62112
	* gcc.dg/tree-ssa/pr62112-1.c: New file.
	* gcc.dg/tree-ssa/pr62112-2.c: Likewise.
	* gcc.c-torture/execute/pr35472.c: Add noclone attribute.
	* gcc.c-torture/execute/20071219-1.c: Likewise.

2014-08-20  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* testsuite/gcc.target/powerpc/builtins-1.c: New test.

2014-08-20  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/swaps-p8-1.c: New test.
	* gcc.target/powerpc/swaps-p8-2.c: New test.
	* gcc.target/powerpc/swaps-p8-3.c: New test.
	* gcc.target/powerpc/swaps-p8-4.c: New test.
	* gcc.target/powerpc/swaps-p8-5.c: New test.
	* gcc.target/powerpc/swaps-p8-6.c: New test.
	* gcc.target/powerpc/swaps-p8-7.c: New test.
	* gcc.target/powerpc/swaps-p8-8.c: New test.
	* gcc.target/powerpc/swaps-p8-9.c: New test.
	* gcc.target/powerpc/swaps-p8-10.c: New test.
	* gcc.target/powerpc/swaps-p8-11.c: New test.
	* gcc.target/powerpc/swaps-p8-12.c: New test.

2014-08-20  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/ipa/ctor-empty-1.c: Update template.

2014-08-20  Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/ipa/devirt-37.C: Fix testcase.

2014-08-20  Martin Jambor  <mjambor@suse.cz>
	    Wei Mi  <wmi@google.com>

	PR ipa/60449
	PR middle-end/61776
	* testsuite/gcc.dg/lto/pr60449_1.c: New test.
	* testsuite/gcc.dg/lto/pr60449_0.c: New test.
	* testsuite/gcc.dg/pr61776.c: New test.

2014-08-20  Steve Ellcey  <sellcey@mips.com>

	PR middle-end/49191
	* lib/target-supports.exp (check_effective_target_non_strict_align):
	Add function description.

2014-08-20  Jan Hubicka  <hubicka@ucw.cz>

	* testsuite/g++.dg/ipa/devirt-17.C: Update template.
	* testsuite/g++.dg/ipa/devirt-16.C: Update template.

2014-08-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/59304