@@ -1,3 +1,15 @@
+2014-08-21  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* lib/target-supports.exp
+	(check_effective_target_logical_op_short_circuit): Add nios2.
+	* gcc.dg/tree-ssa/reassoc-33.c: Skip for nios2.
+	* gcc.dg/tree-ssa/reassoc-34.c: Likewise.
+	* gcc.dg/tree-ssa/reassoc-35.c: Likewise.
+	* gcc.dg/tree-ssa/reassoc-36.c: Likewise.
+	* gcc.dg/tree-ssa/interposition.c: Require fpic effective target
+	for test using -fPIC.
+	* gcc.dg/lto/pr61526_0.c: Likewise.
+	
 2014-08-21  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR tree-optimization/62091
